--- a/src/main/resources/templates/pages/reservation/reservationDate.html
+++ b/src/main/resources/templates/pages/reservation/reservationDate.html
@@ -32,15 +32,9 @@
                 </select>
     
     
-                <button class="submit" type="submit" onclick="nextpage()">확인</button>
+                <button class="submit" type="submit">확인</button>
             </div>
         </form>
-
-        <script type="text/javascript">
-            function nextpage(){
-                window.location.href="reservationTable.html";
-            }
-        </script>
     </div>
     
 </div>
