--- a/src/main/resources/templates/reservation/reservationDate.html
+++ b/src/main/resources/templates/reservation/reservationDate.html
@@ -25,6 +25,7 @@
         <div class="">
             <label>시간</label>
             <select th:field="*{time}">
+                <option value="">예약시간</option>
                 <option th:each="timeSlot : ${T(rest.order.reservation.DefineEnum.TimeSlot).values()}"
                         th:text="${timeSlot.detail}" th:value="${timeSlot}"></option>
             </select>
