--- a/src/main/resources/templates/user/registerPage.html
+++ b/src/main/resources/templates/user/registerPage.html
@@ -36,6 +36,7 @@
                 <label for="email">Email</label>
                 <br>
                 <input id="email" th:field="*{email}" type="text"/>
+                //enum 파일 만들어서 셀렉트 박스를 사용해야하나?
             </div>
             <div>
                 <select name="choice" th:field="*{userType}">
