23-05-15 동적쿼리 테스트 -querydsl 날짜 , 시간 검색 성공

--- a/src/main/resources/templates/admin/reservationList.html
+++ b/src/main/resources/templates/admin/reservationList.html
@@ -12,9 +12,9 @@
     <div>
 
         <form class="" th:object="${researvationSearch}">
-            <div class="">
-                <input class="" placeholder="회원명" th:field="*{name}" type="text"/>
-            </div>
+            <!--            <div class="">-->
+            <!--                <input class="" placeholder="회원명" th:field="*{name}" type="text"/>-->
+            <!--            </div>-->
 
             <div class="">
                 <label>날짜</label>
