--- a/src/main/resources/templates/fragments/Header.html
+++ b/src/main/resources/templates/fragments/Header.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <div class="header" th:fragment="Header">
-    <a href="/"><h2 class="text-muted">Restaurant Name</h2></a>
+    <!-- <a href="/"><h2 class="text-muted">Restaurant Name</h2></a> -->
+    <a href="/"><img src="img/LOGO(1).png" alt="LOGO_img" width="100"></a>
 </div>
