--- a/src/main/resources/templates/reservation/reservationDate.html
+++ b/src/main/resources/templates/reservation/reservationDate.html
@@ -6,36 +6,38 @@
     <link rel="stylesheet" type="text/css" href="/css/reservationDate.css">
 </head>
 <body>
-<h1>예약 페이지 1. 인원수 날짜 , 시간 페이지</h1>
-<div th:replace="~{fragments/Header :: Header}"/>
-<div>
-    <form method="post" role="form" th:action="@{/customer/{id}/table(id=${id})}" th:object="${reservation}">
-        <div class="">
-            <label>인원수</label>
-            <input class="" placeholder="인원수을 입력하세요"
-                   th:field="${reservation.members}"
-                   type="number">
+    <div th:replace="~{fragments/Header :: Header}"> </div>
+    <div class="wrap">
+        <div class="reservation_date">
+            <h3>예약 페이지 1. 인원수 날짜 , 시간 페이지</h3>
+            <form method="post" role="form" th:action="@{/customer/{id}/table(id=${id})}" th:object="${reservation}">
+                <div class="">
+                    <label>인원수</label>
+                    <input class="" placeholder="인원수을 입력하세요"
+                        th:field="${reservation.members}"
+                        type="number">
+                </div>
+
+                <div class="">
+                    <label>날짜</label>
+                    <input class="" placeholder="날짜를 입력하세요" th:field="${reservation.date}"
+                        type="date" id="Date">
+                </div>
+
+                <div class="">
+                    <label>시간</label>
+                    <select th:field="*{time}">
+                        <option value="">예약시간</option>
+                        <option th:each="timeSlot : ${T(rest.order.reservation.DefineEnum.TimeSlot).values()}"
+                                th:text="${timeSlot.detail}" th:value="${timeSlot}"></option>
+                    </select>
+
+
+                    <button class="" type="submit">확인</button>
+                </div>
+            </form>
         </div>
-
-        <div class="">
-            <label>날짜</label>
-            <input class="" placeholder="날짜를 입력하세요" th:field="${reservation.date}"
-                   type="date">
-        </div>
-
-        <div class="">
-            <label>시간</label>
-            <select th:field="*{time}">
-                <option value="">예약시간</option>
-                <option th:each="timeSlot : ${T(rest.order.reservation.DefineEnum.TimeSlot).values()}"
-                        th:text="${timeSlot.detail}" th:value="${timeSlot}"></option>
-            </select>
-
-
-            <button class="" type="submit">확인</button>
-        </div>
-    </form>
-</div>
+    </div>
 
 <script>
     var now_utc = Date.now() // 지금 날짜를 밀리초로
