--- a/src/main/resources/templates/reservation/reservationTable.html
+++ b/src/main/resources/templates/reservation/reservationTable.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/css/reservationDate.css">
+    <link rel="stylesheet" type="text/css" href="/css/reservationTable.css">
     <title>Title</title>
 </head>
 <body>
