--- a/src/main/resources/templates/customer/customerMainPage.html
+++ b/src/main/resources/templates/customer/customerMainPage.html
@@ -17,6 +17,7 @@
                     <li><a href="#main_Menu">Menu</a></li>
                     <li><a href="#main_Reservation">Reservation</a></li>
                     <li><a href="#main_Location">Location</a></li>
+                    <li><a href="../customer/customerInfo.html">MyPage</a></li>
     
                 </ul>
                 <ul class="navbar_member" >
