--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -17,7 +17,7 @@
                     <li><a href="#main_Menu">Menu</a></li>
                     <li><a href="#main_Reservation">Reservation</a></li>
                     <li><a href="#main_Location">Location</a></li>
-                    <li><a href="../templates/customer/customerInfo.html">MyPage</a></li>
+                    <li><a th:href="@{login/login}">MyPage</a></li>
     
                 </ul>
                 <ul class="navbar_member">
