--- a/src/main/resources/static/css/reservationTable.css
+++ b/src/main/resources/static/css/reservationTable.css
@@ -9,7 +9,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgb(158, 158, 158);
+    background: rgb(93, 86, 78);
 }
 .wrap form{
     padding: 50px;
@@ -19,16 +19,24 @@
 .Select{
     width: 30%;
     height: 600px;
-    background-color: white;
+    background: white;
     border-radius: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
+.SelectTable{
+    margin: 10px 10px;
+}
+
+.SelectMenu{
+    margin: 10px 10px;
+}
 .submit{
+    margin-top: 20px;
     float: right;
-    width: 20%;
+    width: 40%;
     height: 30px;
     border: 0;
     outline: none;
