--- a/src/main/resources/templates/reservation/reservationTable.html
+++ b/src/main/resources/templates/reservation/reservationTable.html
@@ -2,14 +2,14 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/css/reservationDate.css">
+    <link rel="stylesheet" type="text/css" href="/css/reservationTable.css">
     <title>Title</title>
 </head>
 <body>
     <div th:replace="~{fragments/Header :: Header}"></div>
     <div class="wrap">
         <div class="Select">
-            <h1>2. 테이블 선택 </h1>
+            <h3>2. 테이블 선택 </h3>
             <form method="post" role="form" th:action="@{/customer/{id}/reserInfo(id=${id})}"
                 th:object="${reservation}">
                 <!--th:object -> 이 안에서 이객체를 계속사용하겠다-->
