--- a/src/main/resources/static/css/mainPage.css
+++ b/src/main/resources/static/css/mainPage.css
@@ -6,9 +6,10 @@ body{
 }
 a{
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: black;
 }
  .main_site{
+    margin-top: 79px;
     width: 100vw;
     height: 80vh;
     background-image: url("../img/restaurant.jpg");
@@ -18,6 +19,8 @@ a{
 
 
 .navbar{
+    position: absolute;
+    z-index: 2;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -26,14 +29,17 @@ a{
     top: 0;
     left: 0;
     right: 0;
-    background-color: rgb(0, 0, 0, 0.5);
+    background-color: rgb(255, 255, 255);
 }
 
 .navbar_menu{
+    /* margin-left: 180px; */
     display: flex;
+    justify-content: center;
     list-style: none;
     font-size: 20px;
     font-family: Merriweather Sans;
+    color: rgb(0, 0, 0);
 }
 
 .navbar_menu li{
@@ -48,9 +54,16 @@ a{
 
 .navbar_member{
     display: flex;
+    justify-content: flex-end;
     list-style: none;
     font-size: 13px;
     font-family: Merriweather Sans;
+}
+
+.navbar_member li:hover {
+    background-color:#e0cda2;
+    transition: 0.9s;
+    border-radius: 4px;
 }
 
 .navbar_member li{
@@ -63,8 +76,17 @@ a{
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
+    z-index: 1;
+}
+
+.content {
+    list-style:none;
+}
+.content li{
+    min-height: 2000px;
 }
 .About_text_center {
+    padding-top: 90px;
     text-align: center;
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
@@ -77,10 +99,11 @@ a{
 }
 
 .Menu_text_center {
+    padding-top: 90px;
     text-align: center;
-    background-color: rgb(0, 0, 0);
+    background-color: white;
+    color: black;
     height: 400px;
-    color: #ffffff;
 }
 
 .Menu_text_center h2{
@@ -88,17 +111,19 @@ a{
 }
 
 .Reservation_text_center {
+    padding-top: 90px;
     text-align: center;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
+    background-color: white;
+    color: black;
     height: 400px;
 }
 
 
 .Location_text_center {
+    padding-top: 90px;
     text-align: center;
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     height: 400px;
 }
 
