--- a/src/main/resources/templates/fragments/Header.html
+++ b/src/main/resources/templates/fragments/Header.html
@@ -4,6 +4,6 @@
 </head>
 <body>
     <div class="header" th:fragment="Header">
-        <a href="/"><img src="static/img/LOGO(1).png" alt="LOGO_img" width="100"></a>
+        <a href="/"><img src="/img/LOGO(1).png" alt="LOGO_img" width="100"></a>
     </div>
 </body>
