--- a/src/main/resources/templates/mainPage.html
+++ b/src/main/resources/templates/mainPage.html
@@ -10,14 +10,14 @@
         <nav>
             <div class="navbar">
                 <div class="navbar_logo">
-                    <a href="/"><img src="img/LOGO(2).png" alt="LOGO_img" width="100"></a>
+                    <a href="/"><img src="img/LOGO(1).png" alt="LOGO_img" width="100"></a>
                 </div>
                 <ul class="navbar_menu">
                     <li><a href="#main_About">About</a></li>
                     <li><a href="#main_Menu">Menu</a></li>
                     <li><a href="#main_Reservation">Reservation</a></li>
                     <li><a href="#main_Location">Location</a></li>
-                    <li><a th:href="@{login/login}">MyPage</a></li>
+                    <!-- <li><a th:href="@{login/login}">MyPage</a></li> -->
     
                 </ul>
                 <ul class="navbar_member">
@@ -31,37 +31,51 @@
         <h1>Welcome to our Restaurant!</h1>
         <h2></h2>
     </div>
-    <section class="mainsite_section" id="main_About">
-        <div class="About_header">
-            <div class="About_text_center">
-                <h2>About</h2>
-                <p>'SWEB' 은 Software-Engineering B팀...</p>
-            </div>
-        </div>
-    </section>
-    <section class="mainsite_section" id="main_Menu">
-        <div class="Menu_header">
-            <div class="Menu_text_center">
-                <h2>Menu</h2>
-                <p>...................</p>
-            </div>
-        </div>
-    </section>
-    <section class="mainsite_section" id="main_Reservation">
-        <div class="Reservation_header">
-            <div class="Reservation_text_center">
-                <h2>Reservation</h2>
-                <p>...................</p>
-            </div>
-        </div>
-    </section>
-    <section class="mainsite_section" id="main_Location">
-        <div class="Location_header">
-            <div class="Location_text_center">
-                <h2>Location</h2>
-                <p>...................</p>
-            </div>
-        </div>
-    </section>
+
+    <div>
+        <ul class="content">
+            <li>
+                <section class="mainsite_section" id="main_About">
+                    <div class="About_header">
+                        <div class="About_text_center">
+                            <h2>About</h2>
+                            <p>'SWEB' 은 Software-Engineering B팀...</p>
+                        </div>
+                    </div>
+                </section>
+            </li>
+            <li>
+                <section class="mainsite_section" id="main_Menu">
+                    <div class="Menu_header">
+                        <div class="Menu_text_center">
+                            <h2>Menu</h2>
+                            <p>...................</p>
+                        </div>
+                    </div>
+                </section>
+            </li>
+            <li>
+                <section class="mainsite_section" id="main_Reservation">
+                    <div class="Reservation_header">
+                        <div class="Reservation_text_center">
+                            <h2>Reservation</h2>
+                            <p>...................</p>
+                        </div>
+                    </div>
+                </section>
+            </li>
+            <li>
+                <section class="mainsite_section" id="main_Location">
+                    <div class="Location_header">
+                        <div class="Location_text_center">
+                            <h2>Location</h2>
+                            <p>...................</p>
+                        </div>
+                    </div>
+                </section>
+            </li>
+        </ul>
+    </div>
+    
 </body>
 </html>
