--- a/src/main/resources/templates/customer/customerlogin.html
+++ b/src/main/resources/templates/customer/customerlogin.html
@@ -11,6 +11,7 @@
       <input type="text" id="username" name="username" autofocus="autofocus" /> <br />
       <label for="password">Password</label>:
       <input type="password" id="password" name="password" /> <br />
+      <input type="checkbox" name="remember-me"> Remember Me
       <input type="submit" value="Log in" />
     </form>
   </body>
