--- a/src/main/resources/templates/user/loginPage.html
+++ b/src/main/resources/templates/user/loginPage.html
@@ -14,6 +14,8 @@
         <label for="loginPwd">Password:</label>
         <input id="loginPwd" name="loginPwd" required type="password"/>
         <br/>
+        <input type="checkbox" name="remember-me"> Remember Me
+        <br />
         <button type="submit">Submit</button>
     </form>
 </div>
