--- a/src/main/resources/templates/customer/customerInfo.html
+++ b/src/main/resources/templates/customer/customerInfo.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 <h1>customer Info</h1>
-<div th:replace="~{fragments/Header :: header}"/>
+<!-- <div th:replace="~{fragments/Header :: header}"/> -->
+
+    <div th:each="reservation : ${reservationList}">
+        <span th:text="${reservation.dateSlot}"></span>
+        <span th:text="${reservation.timeSlot.detail}"></span>
+        <span th:text="${reservation.user.name}"></span>
+        <span th:text="${reservation.tables.number}"></span>
+        <span th:text="${reservation.members}"></span>
+        <br/>
+    </div>
 </body>
+
 </html>
