23-05-16 TC-16 예약 수정

--- a/src/main/resources/templates/reservation/reservationInfo.html
+++ b/src/main/resources/templates/reservation/reservationInfo.html
@@ -28,7 +28,7 @@
         <div>
             <label>테이블 번호:</label>
             <input th:field="*{tid}" type="hidden"/>
-            <span th:text="${reservation.tid}"></span>
+            <span th:text="|${table.number}번|"></span>
         </div>
         <!--        <div>-->
         <!--            <label>선택 메뉴:</label>-->
