23-05-16 TC-16 예약 수정

--- a/src/main/resources/templates/reservation/reservationTable.html
+++ b/src/main/resources/templates/reservation/reservationTable.html
@@ -33,7 +33,7 @@
                     <label>
                         <input class="radio" th:id="'radio' + ${table.tid}" th:name="tid"
                                th:value="${table.tid}" type="radio"/>
-                        <span th:text="${table.number}"></span>
+                        <span th:text="|${table.number}번|"></span>
                     </label>
                 </div>
 
